crates/ruff_linter/src/rules/pandas_vet/snapshots/ruff_linter__rules__pandas_vet__tests__PD003_fail.snap
---
source: crates/ruff_linter/src/rules/pandas_vet/mod.rs
---
PD003 `.isna` is preferred to `.isnull`; functionality is equivalent
 --> <filename>:3:9
  |
2 | import pandas as pd
3 | nulls = pd.isnull(val)
  |         ^^^^^^^^^
