crates/ruff_linter/src/rules/pandas_vet/snapshots/ruff_linter__rules__pandas_vet__tests__PD004_fail.snap
---
source: crates/ruff_linter/src/rules/pandas_vet/mod.rs
---
PD004 `.notna` is preferred to `.notnull`; functionality is equivalent
 --> <filename>:3:13
  |
2 | import pandas as pd
3 | not_nulls = pd.notnull(val)
  |             ^^^^^^^^^^
