crates/ruff_linter/src/rules/pandas_vet/snapshots/ruff_linter__rules__pandas_vet__tests__PD008_fail.snap
---
source: crates/ruff_linter/src/rules/pandas_vet/mod.rs
---
PD008 Use `.loc` instead of `.at`. If speed is important, use NumPy.
 --> <filename>:4:9
  |
2 | import pandas as pd
3 | x = pd.DataFrame()
4 | index = x.at[:, ["B", "A"]]
  |         ^^^^^^^^^^^^^^^^^^^
