crates/ruff_linter/src/rules/pandas_vet/snapshots/ruff_linter__rules__pandas_vet__tests__PD011_fail_values.snap
---
source: crates/ruff_linter/src/rules/pandas_vet/mod.rs
---
PD011 Use `.to_numpy()` or `.array` instead of `.values`
 --> <filename>:4:10
  |
2 | import pandas as pd
3 | x = pd.DataFrame()
4 | result = x.values
  |          ^^^^^^^^
