crates/ruff_linter/src/rules/pandas_vet/snapshots/ruff_linter__rules__pandas_vet__tests__PD015_fail_merge_on_pandas_object.snap
---
source: crates/ruff_linter/src/rules/pandas_vet/mod.rs
---
PD015 Use `.merge` method instead of `pd.merge` function. They have equivalent functionality.
 --> <filename>:5:1
  |
3 | x = pd.DataFrame()
4 | y = pd.DataFrame()
5 | pd.merge(x, y)
  | ^^^^^^^^
